tests/snapshots/backends_kotlin_android_snapshot_test__snapshot_basic__packages__kotlin_android__src__main__kotlin__dev__kreuzberg__DemoBridgeException.kt.snap
---
source: crates/alef-backend-kotlin-android/tests/snapshot_test.rs
expression: "&file.content"
---
// Generated by alef. Do not edit by hand.

package dev.sample_crate

class DemoBridgeException(message: String?, cause: Throwable?) : RuntimeException(message, cause) {
    constructor(message: String?) : this(message, null)
}
