tests/snapshots/backends_kotlin_android_snapshot_test__snapshot_basic__packages__kotlin_android__src__main__kotlin__dev__kreuzberg__Status.kt.snap
---
source: crates/alef-backend-kotlin-android/tests/snapshot_test.rs
expression: "&file.content"
---
// Generated by alef. Do not edit by hand.
@file:Suppress(
    "ktlint:standard:trailing-comma-on-call-site",
    "ktlint:standard:trailing-comma-on-declaration-site",
    "ktlint:standard:spacing-between-declarations-with-comments",
    "ktlint:standard:spacing-between-declarations-with-annotations",
    "ktlint:standard:when-entry-bracing",
    "ktlint:standard:blank-line-between-when-conditions",
    "ktlint:standard:blank-line-before-declaration",
    "ktlint:standard:chain-method-continuation",
    "ktlint:standard:annotation",
    "ktlint:standard:max-line-length",
    "ktlint:standard:no-semi",
    "ktlint:standard:statement-wrapping",
    "MaxLineLength",
    "TooManyFunctions",
    "FunctionParameterNaming",
    "LongParameterList",
    "CyclomaticComplexMethod",
    "LongMethod",
)

package dev.sample_crate

/** Processing status. */
enum class Status {
    /** Active state. */
    @com.fasterxml.jackson.annotation.JsonProperty("Active")
    ACTIVE,
    /** Inactive state. */
    @com.fasterxml.jackson.annotation.JsonProperty("Inactive")
    INACTIVE;

    @com.fasterxml.jackson.annotation.JsonValue
    fun toWire(): String = when (this) {
        ACTIVE -> "Active"
        INACTIVE -> "Inactive"
    }

    companion object {
        @com.fasterxml.jackson.annotation.JsonCreator
        @JvmStatic
        fun fromWire(value: String): Status = when (value) {
            "Active" -> ACTIVE
            "Inactive" -> INACTIVE
            else -> throw IllegalArgumentException("Unknown Status value: $value")
        }
    }
}
